style(playlist): fix z-index issues with search results

--- a/client/styles/playlist.scss
+++ b/client/styles/playlist.scss
@@ -123,6 +123,7 @@
 .playlist-tracklist-search {
   position: relative;
   margin-left: auto;
+  z-index: 500;
 }
 
 .playlist-input {
